2003-08-13  Zack Weinberg  <zack@codesourcery.com>

	* config.gcc (iq2000*-*-elf*): Don't set xm_file.
	* config/iq2000/xm-iq2000.h: Delete file.

2003-08-13  Geoffrey Keating  <geoffk@apple.com>

	* gengtype.c (walk_type): Process a subobject before processing
	the pointer that points to the subobject.

2003-08-13  Per Bothner  <pbothner@apple.com>

	* regclass.c (init_reg_modes):  Make non-static.
	Rename to init_reg_modes_once per new naming convention.
	(init_regs):  Don't call init_reg_modes here.
	* emit-rtl.c (init_emit_once):  Call init_reg_modes_once here instead.
	* rtl.h (init_reg_modes_once):  New declaration.
	* toplev.c (backend_init):  Call init_regs after init_emit_once.

2003-08-13  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/linux.h (DBX_REGISTER_NUMBER): Define so to map a
	special index for MD_FALLBACK_FRAME_STATE_FOR to itself.

2003-08-13  J"orn Rennecke <joern.rennecke@superh.com>

	* sh.c (sh_get_pr_initial_val): Always wrap in unspec for TARGET_SH1.
	* sh.md (load_ra): Change insn predicate to TARGET_SH1.

2003-08-13  Dale Johannesen  <dalej@apple.com>

	* config/rs6000/rs6000.md (ctrsi, ctrdi):  Reenable
	handling of decrement-and-branch farther than 32 bits.

2003-08-12  Kelley Cook  <kelleycook@wideopenwest.com>

	* configure.in (make_compare_target): Move test to ...
	* aclocal.m4 (gcc_AC_PROG_CMP_IGNORE_INITIAL): here.
	* configure: Regenerate.

2003-08-12  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/iris6.h: Convert to C90 prototypes.
	* config/mips/irix6-libc-compat.c: Likewise.
	* config/mips/mips-protos.h: Likewise.
	* config/mips/mips.c: Likewise.

2003-08-12  Nathanael Nerode  <neroden@gcc.gnu.org>

	fixinc/inclhack.def (svr4_krnl): Rename from svr4_kernel.  Enable
	for selected machines.  Comment heavily.
	fixinc/fixincl.x: Rebuild.
	fixinc/tests/base/fs/rfs/rf_cache.h: New file.

2003-08-12  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.h: Tweak various comments.
	* config/mips/mips.c: Likewise.